--- a/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/map.html.twig
@@ -9,7 +9,7 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.units) }}{{ form_widget(form.configuration.units) }}
     <div class="clearContainer"></div>
-    <label class="labelInput">{{"Max. extent"|trans}}</label>
+    <label class="labelInput">{{"mb.manager.admin.map.max_extent"|trans}}</label>
     <div class="singleRow">
         {{form_label(form.configuration.extent_max.0)}}
         {{form_widget(form.configuration.extent_max.0)}}
@@ -24,7 +24,7 @@
         {{form_widget(form.configuration.extent_max.3)}}
     </div>
     <div class="clearContainer"></div>
-    <label class="labelInput">{{"Start. extent"|trans}}</label>
+    <label class="labelInput">{{"mb.manager.admin.map.start_extent"|trans}}</label>
     <div class="singleRow">
         {{form_label(form.configuration.extent_start.0)}}
         {{form_widget(form.configuration.extent_start.0)}}
