--- a/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/zoombar.html.twig
@@ -1,6 +1,6 @@
 <div class="elementFormToolbar elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.draggable) }}<label for="{{form.configuration.draggable.vars.id}}" class="labelCheck">{{"Draggable"|trans}}</label>
+        {{ form_widget(form.configuration.draggable) }}<label for="{{form.configuration.draggable.vars.id}}" class="labelCheck">{{"mb.manager.admin.zoombar.draggable"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
