--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/new.html.twig
@@ -1,6 +1,6 @@
 {% extends "FOMManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ 'Add Service' | trans }}{% endblock %}
+{% block title %}{{ 'mb.manager.admin.source.new.add' | trans }}{% endblock %}
 
 {% block manager_content %}
 
