--- a/src/Mapbender/ManagerBundle/Resources/views/Application/deleteInstance.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/deleteInstance.html.twig
@@ -4,7 +4,7 @@
 {% block manager_content %}
 
 <form id="instance-delete" action="{{ path('mapbender_manager_application_deleteinstance', { 'slug': application.slug, 'layersetId': layerset.id, 'instanceId' : instance.id }) }}" method="post" {{ form_enctype(form)}}>
-    {% trans %}Do you really want to remove the instance with the title <span class="italic">%instance_title%</span>?{% endtrans %}
+    {% trans with {'%instance_title%': instance_title} %} mb.manager.admin.instance.delete.confirm {% endtrans %}
     {{ form_widget(form) }}
 </form>
 
