--- a/src/Mapbender/ManagerBundle/Resources/views/Application/deleteLayerset.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/deleteLayerset.html.twig
@@ -4,7 +4,7 @@
 {% block manager_content %}
 
 <form id="deleteLaysersetForm" action="{{ path('mapbender_manager_application_deletelayerset', { 'slug': application.slug, 'layersetId' : layerset.id }) }}" method="post" {{ form_enctype(form)}}>
-    {% trans %}Do you really want to remove the layerset with the title <span class="italic">%layerset_title%</span>?{% endtrans %}
+    {% trans with {'%layerset_title%': layerset_title} %} mb.manager.admin.layerset.delete.confirm {% endtrans %}
     {{ form_widget(form) }}
 </form>
 
