--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -30,7 +30,7 @@
                 <td class="titleColumn description">{{ element.title }}</td>
                 <td class="typeColumn description">{{ element_class_title(element) }}</td>
                 <td class="iconColumn">
-                  <div class="checkWrapper left iconCheckbox iconSmall {% if element.enabled %}iconCheckboxActive{% endif %}" title="{{"Toggle show/hide element"|trans}} {{element.title}}">
+                  <div class="checkWrapper left iconCheckbox iconSmall {% if element.enabled %}iconCheckboxActive{% endif %}" title="{{"mb.manager.admin.element.show_hide"|trans}} {{element.title}}">
                     <input class="checkbox" data-url="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                   </div>
                   <span class="iconEdit editElement iconSmall" title="{{"mb.manager.admin.element.edit"|trans}}  {{element.title}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}"></span>
@@ -41,7 +41,7 @@
               <tr class="placeholderRow"></tr>
           {% else %}
             <tr class="dummy">
-              <td class="description">{{"No elements added."|trans}}</td>
+              <td class="description">{{"mb.manager.admin.element.no_element_added."|trans}}</td>
               <td></td>
               <td></td>
             </tr>
