--- a/src/Mapbender/ManagerBundle/Resources/views/Element/form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/form.html.twig
@@ -1,12 +1,10 @@
 <header>
-{% trans %}
-Required fields are marked with dark labels, while optional fields have lighter labels.
-{% endtrans %}
+    {{ 'mb.manager.admin.element.requirements' | trans}}
 </header>
 
 <ul>
-    <li class="active"><a href="#element-basics" data-toggle="tab">{{ 'Base data' | trans}}</a></li>
-    <li><a href="#element-configuration" data-toggle="tab">{{ 'Configuration' | trans}}</a></li>
+    <li class="active"><a href="#element-basics" data-toggle="tab">{{ 'mb.manager.admin.element.base_data' | trans}}</a></li>
+    <li><a href="#element-configuration" data-toggle="tab">{{ 'mb.manager.admin.element.configuration' | trans}}</a></li>
 </ul>
 
 <div>
