--- a/src/Mapbender/ManagerBundle/Resources/views/Element/overview.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/overview.html.twig
@@ -1,6 +1,6 @@
 <div class="elementFormOverview elementForm">
-    <div class="left">{{ form_widget(form.configuration.maximized) }}<label for="{{form.configuration.maximized.vars.id}}" class="labelCheck">{{"Maximize"|trans}}</label></div>
-    {{ form_widget(form.configuration.fixed) }}<label for="{{form.configuration.fixed.vars.id}}" class="labelCheck">{{"Fix"|trans}}</label>
+    <div class="left">{{ form_widget(form.configuration.maximized) }}<label for="{{form.configuration.maximized.vars.id}}" class="labelCheck">{{"mb.manager.admin.overview.maximize"|trans}}</label></div>
+    {{ form_widget(form.configuration.fixed) }}<label for="{{form.configuration.fixed.vars.id}}" class="labelCheck">{{"mb.manager.admin.overview.fix"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
