--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmc-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmc-list.html.twig
@@ -2,7 +2,7 @@
 <a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconSmall addElement" title="{{'Add new wmc to'|trans}} {{region}}"></a>
 {% endif %}
 {% if 'listloader' in configuration.components %}
-<table class="elementsTable tableCore">
+<table class="tableCore">
     <thead>
         <tr>
             <th>{{ 'Id' | trans }}</th>
