--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-form.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-form.html.twig
@@ -1,5 +1,5 @@
 <form id="wmc-save" action="{{ url('mapbender_core_application_element', {'slug': app.request.get('slug'), 'id': id, 'action': 'save'}) }}" method="post" title="{% if form.id.vars.value == '' %}{{ 'wmc.create'|trans}}{% else %}{{ 'wmc.edit'|trans}}{% endif %}">
-    <div class="elementFormToolbar elementForm">
+    <div class="elementFormWMC elementForm">
         <div class="left">
             {{ form_widget(form.public) }}<label for="{{form.public.vars.id}}" class="labelCheck">{{"Public"|trans}}</label>
         </div>        
