--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-list.html.twig
@@ -1,11 +1,11 @@
-<table class="elementsTable tableCore">
+<table class="tableCore">
     <thead>
         <tr>
             <th>{{ 'Id' | trans }}</th>
-            <th class="type">{{ 'Title' | trans }}</th>
-            <th class="type">{{ 'Description' | trans }}</th>
-            <th class="iconColumn">
-                <a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': '' }) }}" class="iconAdd iconSmall addWmc" title="{{'Add new wmc'|trans}}"></a>
+            <th>{{ 'Title' | trans }}</th>
+            <th>{{ 'Description' | trans }}</th>
+            <th class="iconColumn right" colspan="3">
+                <a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': '' }) }}" class="icon iconAdd iconSmall addWmc" title="{{'Add new wmc'|trans}}"></a>
             </th>
         </tr>
     </thead>
@@ -14,14 +14,18 @@
       {% for wmc in wmclist %}
         <tr class="element" data-id="{{wmc.id}}">
             <td class="titleColumn description">{{ wmc.id }}</td>
-            <td class="typeColumn description">{{ wmc.state.title }}</td>
-            <td class="typeColumn description">{{ wmc.abstract }}</td>
-            <td class="iconColumn">
-                <div class="checkWrapper left iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"Toggle public/private wmc"|trans}} {{wmc.state.title}}">
+            <td class="description">{{ wmc.state.title }}</td>
+            <td class="description">{{ wmc.abstract }}</td>
+            <td class="iconColumn right">
+                <span class="iconRemove iconSmall removeWmc" title="{{"Delete Wmc"|trans}} {{wmc.state.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'confirmdelete', '_id': wmc.id }) }}"></span>
+            </td>
+            <td class="iconColumn right">
+                <span class="iconEdit iconSmall editWmc" title="{{"Edit Wmc"|trans}}  {{wmc.state.title}}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': wmc.id }) }}"></span>
+            </td>
+            <td class="iconColumn right">
+                <div class="checkWrapper iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"Toggle public/private wmc"|trans}} {{wmc.state.title}}">
                     <input class="checkbox" data-href="{{ path('mapbender_core_application_element', { 'slug': application.slug, 'id': id })}}" data-id="{{ wmc.id }}" type="checkbox" {% if wmc.public %} checked="checked" {% endif %}>
                 </div>
-                <span class="iconEdit iconSmall editWmc" title="{{"Edit Wmc"|trans}}  {{wmc.state.title}}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': wmc.id }) }}"></span>
-                <span class="iconRemove iconSmall removeWmc" title="{{"Delete Wmc"|trans}} {{wmc.state.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'confirmdelete', '_id': wmc.id }) }}"></span>
             </td>
         </tr>
       {% endfor %}
