--- a/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
@@ -1,12 +1,12 @@
-<div class="mb-element mb-element-poi" id="{{ id }}" title="{{ 'Share POI'|trans }}">
+<div class="mb-element mb-element-poi" id="{{ id }}" title="{{ 'mb.core.poi.sharepoi'|trans }}">
     <div class="input">
     <form id="poiForm">
-        <label for="body">{{ 'Text'|trans }}</label><br />
+        <label for="body">{{ 'mb.core.poi.label.text'|trans }}</label><br />
         <textarea id="body">{{ configuration.body }}</textarea>
     </form>
     </div>
     <div class="output">
-    <p>{{ 'You can use the following snippet in an email to send the POI.'|trans }}</p>
+    <p>{{ 'mb.core.poi.text.snippet'|trans }}</p>
     <textarea></textarea>
     </div>
 </div>
