--- a/src/Mapbender/CoreBundle/Resources/views/Element/sketch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/sketch.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-sketch" title="{{ title|trans }}"></div>
+<div id="{{ id }}" class="mb-element mb-element-sketch" title="{{ "mb.core.sketch.title"|trans }}"></div>
