--- a/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/srsselector.html.twig
@@ -1,8 +1,8 @@
 {% if configuration.label == true %}
-  <span class="labelInput">{{ title|trans }}</span>
+  <span class="labelInput">{{ "mb.core.srsselector.title"|trans }}</span>
 {% endif %}
 <div id="{{ id }}" class="mb-element mb-element-srsselector dropdown">
-  <select class="hiddenDropdown" id="srsselector" title="{{ title|trans }}"></select>
+  <select class="hiddenDropdown" id="srsselector" title="{{ "mb.core.srsselector.title"|trans }}"></select>
   <div class="dropdownValue iconDown"></div>
   <ul class="dropdownList"></ul>
 </div>
