--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/layertree.html.twig
@@ -1,9 +1,9 @@
 <div class="elementFormLayerTree elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"Show Base Sources"|trans}}</label>
+        {{ form_widget(form.configuration.showBaseSource) }}<label for="{{form.configuration.showBaseSource.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showbasesources"|trans}}</label>
     </div>
     <div class="left">
-        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.autoopen"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
@@ -17,10 +17,10 @@
     {{ form_label(form.configuration.titlemaxlength) }}{{ form_widget(form.configuration.titlemaxlength) }}
     <div class="clearContainer"></div>
     <div class="left">
-        {{ form_widget(form.configuration.showHeader) }}<label for="{{form.configuration.showHeader.vars.id}}" class="labelCheck">{{"Show Header"|trans}}</label>
+        {{ form_widget(form.configuration.showHeader) }}<label for="{{form.configuration.showHeader.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showheader"|trans}}</label>
     </div>
     <div class="left">
-        {{ form_widget(form.configuration.layerRemove) }}<label for="{{form.configuration.layerRemove.vars.id}}" class="labelCheck">{{"Show Layer Remove"|trans}}</label>
+        {{ form_widget(form.configuration.layerRemove) }}<label for="{{form.configuration.layerRemove.vars.id}}" class="labelCheck">{{"mb.core.admin.layertree.label.showlayerremove"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
 </div>
