--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/legend.html.twig
@@ -1,8 +1,8 @@
 <div class="elementFormLegend elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.autoopen"|trans}}</label>
     </div>
-    {{ form_widget(form.configuration.hideEmptyLayers) }}<label for="{{form.configuration.hideEmptyLayers.vars.id}}" class="labelCheck">{{"Hide empty layers"|trans}}</label>
+    {{ form_widget(form.configuration.hideEmptyLayers) }}<label for="{{form.configuration.hideEmptyLayers.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.hideemptylayers"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
@@ -16,12 +16,12 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.noLegend) }}{{ form_widget(form.configuration.noLegend) }}
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.generateLegendGraphicUrl) }}<label for="{{form.configuration.generateLegendGraphicUrl.vars.id}}" class="labelCheck">{{"Generate get legend graphic url"|trans}}</label>
+    {{ form_widget(form.configuration.generateLegendGraphicUrl) }}<label for="{{form.configuration.generateLegendGraphicUrl.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.generatelegendurl"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showSourceTitle) }}<label for="{{form.configuration.showSourceTitle.vars.id}}" class="labelCheck">{{"Show WMS title"|trans}}</label>
+    {{ form_widget(form.configuration.showSourceTitle) }}<label for="{{form.configuration.showSourceTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showwmsitle"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showLayerTitle) }}<label for="{{form.configuration.showLayerTitle.vars.id}}" class="labelCheck">{{"Show layer title"|trans}}</label>
+    {{ form_widget(form.configuration.showLayerTitle) }}<label for="{{form.configuration.showLayerTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showlayertitle"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showGrouppedTitle) }}<label for="{{form.configuration.showGrouppedTitle.vars.id}}" class="labelCheck">{{"Show grouped layer title"|trans}}</label>
+    {{ form_widget(form.configuration.showGrouppedTitle) }}<label for="{{form.configuration.showGrouppedTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showgroupedlayertitle"|trans}}</label>
     <div class="clearContainer"></div>
 </div>
