--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -43,8 +43,8 @@
 
           <div class="tabContainerAlt">
             <ul class="tabs">
-              <li id="tab1" class="tab active">{{"Button1" | trans }}</li>
-              <li id="tab2" class="tab">{{"Button2" | trans }}</li>
+              <li id="tab1" class="tab active">{{"mb.core.template.fullscreen.btn1" | trans }}</li>
+              <li id="tab2" class="tab">{{"mb.core.template.fullscreen.btn2" | trans }}</li>
             </ul>
             <div id="container1" class="container active">
               Container1
