--- a/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog_content.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/about_dialog_content.html.twig
@@ -1,2 +1,2 @@
-<p class="subTitle">{{ fom.server_name }} {{"v."|trans}}{{ fom.server_version }}<p/>
-<p class="description">{{"Learn more about Mapbender3 at our"|trans}} <a class="linkButton" href="http://mapbender3.org" target="_blank" title="{{"Visit the official website."}}">{{"website"|trans}}</a>.</p>
+<p class="subTitle">{{ fom.server_name }} {{"mb.core.aboutdialogcontent.versionprefix"|trans}}{{ fom.server_version }}<p/>
+<p class="description">{{"mb.core.aboutdialogcontent.learnmore"|trans}} <a class="linkButton" href="http://mapbender3.org" target="_blank" title="{{"mb.core.aboutdialogcontent.linktitle"|trans}}">{{"mb.core.aboutdialogcontent.website"|trans}}</a>.</p>
