--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,14 +1,14 @@
-<div id="{{ id }}" class="mb-element mb-element-layertree" title="{{ title|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-layertree" title="{{ "mb.core.layertree.title"|trans }}">
   <li class="hide-elm leave showLeaves">
     <div class="leaveContainer">
       <span class="layer-spinner"></span>
       <span class="layer-state"></span>
       <span class="iconFolder left"></span>
       <div class="checkWrapper left iconCheckbox">
-        <input class="layer-selected checkbox" type="checkbox" title="{{ 'Visibility selector' | trans  }}" name="selected">
+        <input class="layer-selected checkbox" type="checkbox" title="{{ 'mb.core.layertree.label.visibilityselector' | trans  }}" name="selected">
       </div>
       <div class="checkWrapper left iconInfo featureInfoWrapper">
-        <input class="layer-info checkbox" type="checkbox" title="{{ 'FeatureInfo selector' | trans  }}" name="info"/>
+        <input class="layer-info checkbox" type="checkbox" title="{{ 'mb.core.layertree.label.featureinfoselector' | trans  }}" name="info"/>
       </div>
       <span class="layer-title labelCheck"></span>
       <span class="layer-menu-btn">&#9776;
@@ -17,14 +17,14 @@
             <div class="layer-opacity-slider"></div>
             <div class="layer-opacity-labels">
               <span class="layer-opacity-label-hundred">100 %</span>
-              <span class="layer-opacity-label">{{ "Transparency"|trans }}</span>
+              <span class="layer-opacity-label">{{ "mb.core.layertree.label.transparency"|trans }}</span>
               <span class="layer-opacity-label-zero">0 %</span>
             </div>
           </div>
-          <span class="layer-zoom span-btn">{{'Zoom to layer'|trans }}</span>
-          <span class="layer-metadata span-btn">{{'Metadata'|trans }}</span>
-          <span class="layer-legend span-btn">{{'Legend'|trans }}</span>
-          <span class="layer-kmlexport span-btn">{{'KML Export'|trans }}</span>
+          <span class="layer-zoom span-btn">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</span>
+          <span class="layer-metadata span-btn">{{ 'mb.core.layertree.label.metadata'|trans }}</span>
+          <span class="layer-legend span-btn">{{ 'mb.core.layertree.label.legend'|trans }}</span>
+          <span class="layer-kmlexport span-btn">{{ 'mb.core.layertree.label.kmlexport'|trans }}</span>
         </div>
       </span>
       <span class="iconRemove"></span>
@@ -32,7 +32,7 @@
     <ul id="list-first" class="layers"></ul>
   </li>
   {% if configuration.showHeader %}
-  <h2>{{ 'Sources' | trans }} (<span id="counter">0</span>)<a href="#" id="delete-all" class="icononly" title="{{ 'Delete all Sources' |trans }}">&times;</a></h2>
+  <h2>{{ 'mb.core.layertree.label.sources' | trans }} (<span id="counter">0</span>)<a href="#" id="delete-all" class="icononly" title="{{ 'mb.core.layertree.label.deleteallsources' |trans }}">&times;</a></h2>
   {% endif %}
   <ul id="list-root" class="layers" ></ul>
 </div>
