--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/copyright.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/copyright.html.twig
@@ -1,5 +1,5 @@
 <div class="elementFormCopyright elementForm">
-    {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Autoopen"|trans}}</label>
+    {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{ "mb.core.admin.copyright.label.autoopen"|trans }}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
