translations for wmcbundle added

--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmclist.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmclist.html.twig
@@ -6,7 +6,7 @@
     {{ form_label(form.configuration.target) }}{{ form_widget(form.configuration.target) }}
     <div class="clearContainer"></div>
     <div class="left">
-        {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Label"|trans}}</label>
+        {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"mb.wmc.admin.wmclist.label"|trans}}</label>
     </div>        
     <div class="clearContainer"></div> 
 </div>
