--- a/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/ElementAdmin/wmcloader.html.twig
@@ -9,7 +9,7 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.keepSources) }}{{ form_widget(form.configuration.keepSources) }}
     <div class="left">
-        {{ form_widget(form.configuration.keepExtent) }}<label for="{{form.configuration.keepExtent.vars.id}}" class="labelCheck">{{"Keep Extent"|trans}}</label>
+        {{ form_widget(form.configuration.keepExtent) }}<label for="{{form.configuration.keepExtent.vars.id}}" class="labelCheck">{{"mb.wmc.admin.wmcloader.keep_extent"|trans}}</label>
     </div>        
     <div class="clearContainer"></div> 
 </div>
