--- a/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap-content.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap-content.html.twig
@@ -1,16 +1,16 @@
 <ul>
 {% for receiver in configuration.receiver %}
     {% if receiver == 'email' %}
-    <li><img src="/viewer/bundles/bkggeoportal/images/icons/emaillink.png" width="24"> <span class="span-link" id="suggestmap-email">{{ 'As e-mail'|trans }}</span></li>
+    <li><img src="/viewer/bundles/bkggeoportal/images/icons/emaillink.png" width="24"> <span class="span-link" id="suggestmap-email">{{ 'mb.wmc.element.suggestmap.content.email'|trans }}</span></li>
     {% endif %}
     {% if receiver == 'facebook' %}
-    <li><img src="/viewer/bundles/bkggeoportal/images/icons/twitterlink.png" width="24"/> <span class="span-link" id="suggestmap-twitter">{{ 'At Twitter'|trans }}</span></li>
+    <li><img src="/viewer/bundles/bkggeoportal/images/icons/twitterlink.png" width="24"/> <span class="span-link" id="suggestmap-twitter">{{ 'mb.wmc.element.suggestmap.content.twitter'|trans }}</span></li>
             {% endif %}
     {% if receiver == 'twitter' %}
-    <li><img src="/viewer/bundles/bkggeoportal/images/icons/facebooklink.png" width="24"/> <span class="span-link" id="suggestmap-facebook">{{ 'At Facebook'|trans }}</span></li>
+    <li><img src="/viewer/bundles/bkggeoportal/images/icons/facebooklink.png" width="24"/> <span class="span-link" id="suggestmap-facebook">{{ 'mb.wmc.element.suggestmap.content.facebook'|trans }}</span></li>
     {% endif %}
     {% if receiver == 'google+' %}
-    <li><img src="/viewer/bundles/bkggeoportal/images/icons/google+link.png" width="24"/> <span class="span-link" id="suggestmap-googleplus">{{ 'At Google+'|trans }}</span></li>
+    <li><img src="/viewer/bundles/bkggeoportal/images/icons/google+link.png" width="24"/> <span class="span-link" id="suggestmap-googleplus">{{ 'mb.wmc.element.suggestmap.content.google+'|trans }}</span></li>
     {% endif %}
 {% endfor %}
 </ul>
