--- a/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-suggestmap" title="{{ "Suggest Map"|trans }}"></div>
+<div id="{{ id }}" class="mb-element mb-element-suggestmap" title="{{ configuration.tooltip|default(title)|trans }}"></div>
