--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmc-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmc-list.html.twig
@@ -1,13 +1,13 @@
 {% if 'listloader' in configuration.components %}
-<a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconSmall addElement" title="{{'Add new wmc to'|trans}} {{region}}"></a>
+<a href="{{ url('mapbender_manager_element_select', { 'slug': application.slug, 'region': region }) }}" class="iconAdd iconSmall addElement" title="{{'mb.wmc.list.add_wmc'|trans}} {{region}}"></a>
 {% endif %}
 {% if 'listloader' in configuration.components %}
 <table class="elementsTable tableCore">
     <thead>
         <tr>
-            <th>{{ 'Id' | trans }}</th>
-            <th class="type">{{ 'Title' | trans }}</th>
-            <th class="type">{{ 'Description' | trans }}</th>
+            <th>{{ 'mb.wmc.list.id' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.list.title' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.list.description' | trans }}</th>
             <th class="iconColumn"></th>
         </tr>
     </thead>
@@ -19,18 +19,18 @@
             <td class="typeColumn description">{{ wmc.title }}</td>
             <td class="typeColumn description">{{ wmc.description }}</td>
             <td class="iconColumn">
-                <div class="checkWrapper left iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"Toggle public/private wmc"|trans}} {{wmc.title}}">
+                <div class="checkWrapper left iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"mb.wmc.list.toggle"|trans}} {{wmc.title}}">
                     <input class="checkbox" data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %}>
                 </div>
-                <span class="iconEdit editElement iconSmall" title="{{"Wmc element"|trans}}  {{wmc.title}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': wmc.id})}}"></span>
-                <span class="iconRemove removeElement iconSmall" title="{{"Delete Wmc"|trans}} {{wmc.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
+                <span class="iconEdit editElement iconSmall" title="{{"mb.wmc.list.wmc_element"|trans}}  {{wmc.title}}" data-url="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': wmc.id})}}"></span>
+                <span class="iconRemove removeElement iconSmall" title="{{"mb.wmc.list.delete_wmc"|trans}} {{wmc.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ path('mapbender_manager_element_confirmdelete', {'slug': application.slug, 'id': element.id}) }}"></span>
             </td>
         </tr>
       {% endfor %}
         <tr class="placeholderRow"></tr>
     {% else %}
         <tr>
-            <td class="description">{{"No wmc added."|trans}}</td>
+            <td class="description">{{"mb.wmc.list.no_wmc"|trans}}</td>
             <td></td>
             <td></td>
             <td></td>
