--- a/src/Mapbender/WmcBundle/Resources/views/Element/wmcloader.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/wmcloader.html.twig
@@ -1,1 +1,1 @@
-<div id="{{ id }}" class="mb-element mb-element-wmcloader" title="{{ "Wmc Loader"|trans }}"></div>
+<div id="{{ id }}" class="mb-element mb-element-wmcloader" title="{{ configuration.tooltip|default(title)|trans }}"></div>
