--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/deletewmc.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/deletewmc.html.twig
@@ -2,7 +2,7 @@
 {% set wmc_id = wmc.id %} 
 <form id="wmc-delete" action="{{ path('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'delete' }) }}" method="post" {{ form_enctype(form)}}>
     <header>
-    {% trans %}Do you really want to remove the wmc with the title <em>%wmc_title%</em> and the id <em>%wmc_id%</em>?{% endtrans %}
+    {{ 'mb.wmc.wmc.delete_confirm' | trans ({'%wmc_title%': wmc_title,'%wmc_id%': wmc_id}) }}
     </header>
     {{ form_widget(form) }}
 </form>
