--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmceditor-list.html.twig
@@ -1,11 +1,11 @@
 <table class="elementsTable tableCore">
     <thead>
         <tr>
-            <th>{{ 'Id' | trans }}</th>
-            <th class="type">{{ 'Title' | trans }}</th>
-            <th class="type">{{ 'Description' | trans }}</th>
+            <th>{{ 'mb.wmc.wmceditor.list.id' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.wmceditor.list.title' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.wmceditor.list.description' | trans }}</th>
             <th class="iconColumn">
-                <a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': '' }) }}" class="iconAdd iconSmall addWmc" title="{{'Add new wmc'|trans}}"></a>
+                <a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': '' }) }}" class="iconAdd iconSmall addWmc" title="{{'mb.wmc.wmceditor.list.add_wmc'|trans}}"></a>
             </th>
         </tr>
     </thead>
@@ -17,18 +17,18 @@
             <td class="typeColumn description">{{ wmc.state.title }}</td>
             <td class="typeColumn description">{{ wmc.abstract }}</td>
             <td class="iconColumn">
-                <div class="checkWrapper left iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"Toggle public/private wmc"|trans}} {{wmc.state.title}}">
+                <div class="checkWrapper left iconCheckbox iconSmall {% if wmc.public %}iconCheckboxActive{% endif %}" title="{{"mb.wmc.wmceditor.list.toggle"|trans}} {{wmc.state.title}}">
                     <input class="checkbox" data-href="{{ path('mapbender_core_application_element', { 'slug': application.slug, 'id': id })}}" data-id="{{ wmc.id }}" type="checkbox" {% if wmc.public %} checked="checked" {% endif %}>
                 </div>
-                <span class="iconEdit iconSmall editWmc" title="{{"Edit Wmc"|trans}}  {{wmc.state.title}}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': wmc.id }) }}"></span>
-                <span class="iconRemove iconSmall removeWmc" title="{{"Delete Wmc"|trans}} {{wmc.state.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'confirmdelete', '_id': wmc.id }) }}"></span>
+                <span class="iconEdit iconSmall editWmc" title="{{"mb.wmc.wmceditor.list.edit_wmc"|trans}}  {{wmc.state.title}}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'get', 'wmcid': wmc.id }) }}"></span>
+                <span class="iconRemove iconSmall removeWmc" title="{{"mb.wmc.wmceditor.list.delete_wmc"|trans}} {{wmc.state.title}}" data-id="{{ wmc.id }}" data-slug="{{ application.slug }}" data-url="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'confirmdelete', '_id': wmc.id }) }}"></span>
             </td>
         </tr>
       {% endfor %}
         <tr class="placeholderRow"></tr>
     {% else %}
         <tr>
-            <td class="description">{{"No wmc added."|trans}}</td>
+            <td class="description">{{"mb.wmc.wmceditor.list.no_wmc"|trans}}</td>
             <td></td>
             <td></td>
             <td></td>
