--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-list.html.twig
@@ -1,13 +1,13 @@
 {% if 'wmcxmlloader' in configuration.components %}
-<a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'loadform' }) }}" class="iconAdd iconSmall loadWmcXml" title="{{'Load XML WMC'|trans}}"></a>
+<a href="{{ url('mapbender_core_application_element', { 'slug': application.slug, 'id': id, 'action': 'loadform' }) }}" class="iconAdd iconSmall loadWmcXml" title="{{'mb.wmc.wmcloader.load_xml_wmc'|trans}}"></a>
 {% endif %}
 {% if 'wmclistloader' in configuration.components %}
 <table class="elementsTable tableCore">
     <thead>
         <tr>
-            <th>{{ 'Id' | trans }}</th>
-            <th class="type">{{ 'Title' | trans }}</th>
-            <th class="type">{{ 'Description' | trans }}</th>
+            <th>{{ 'mb.wmc.wmcloader.id' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.wmcloader.title' | trans }}</th>
+            <th class="type">{{ 'mb.wmc.wmcloader.description' | trans }}</th>
             <th class="iconColumn"></th>
         </tr>
     </thead>
@@ -20,7 +20,7 @@
             <td class="typeColumn description">{{ wmc.state.title }}</td>
             <td class="typeColumn description">{{ wmc.abstract }}</td>
             <td class="iconColumn">
-                <span class="iconView iconSmall loadWmcId" title="{{"View Wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
+                <span class="iconView iconSmall loadWmcId" title="{{"mb.wmc.wmcloader.view_wmc"|trans}}  {{wmc.state.title}}" data-id="{{ wmc.id }}"></span>
             </td>
         </tr>
         {% endif %}
@@ -28,7 +28,7 @@
         <tr class="placeholderRow"></tr>
     {% else %}
         <tr>
-            <td class="description">{{"No wmc."|trans}}</td>
+            <td class="description">{{"mb.wmc.wmcloader.no_wmc"|trans}}</td>
             <td></td>
             <td></td>
             <td></td>
