--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloaderstate-form.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloaderstate-form.html.twig
@@ -3,7 +3,7 @@
         {{ form_widget(form.state) }}
         <div class="clearContainer"></div>
         {{ form_row(form._token) }}
-        <input type="submit" class="button right" name="{{ 'Load' | trans }}" />
+        <input type="submit" class="button right" name="{{ 'mb.wmc.wmcloader.state.load' | trans }}" />
         <div class="clearContainer"></div>
     </div>
 </form>
