wmcbundle translations changed

--- a/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
@@ -7,13 +7,5 @@
 {{ "mb.wmc.error.wmcremoved" | trans}}
 {{ "mb.wmc.error.wmccannotbesaved" | trans ({'%wmcid%': 'wmcid' })}}
 {{ "mb.wmc.error.wmcsaved" | trans ({'%wmcid%': 'wmcid' })}}
-
-
-
-
-{#{ "mb.wmc.element.wmceditor.error.wmccannotremoved" | trans}}
-
-{{ "mb.wmc.element.wmceditor.error.wmcnotfound" | trans ({'%wmcid%': wmcid})}} 'WMC: ' . $wmcid . ' is not found'
-{{ "mb.wmc.element.wmceditor.error.wmccannotremoved" | trans}} 
-{{ "mb.wmc.element.wmceditor.error.wmccannotbeloaded" | trans}}
-{{ "mb.wmc.element.wmceditor.error.wmcloadernotallowed" | trans}#}
+{{ "mb.wmc.error.statecannotbesaved" | trans}}
+{{ "mb.wmc.error.statenotfound" | trans ({'%stateid%': 'stateid' })}}
