--- a/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -1,6 +1,6 @@
 <span id="{{ id }}" class="mb-element mb-element-coordsdisplay {{configuration.anchor}}">
     {% if configuration.label == true %}
-        {{ "mb.core.coordinatesdisplay.title"| trans }}
+        {{ title| trans }}
     {% endif %}
     <span class="{% if configuration.label == false %}iconCoordinates{% endif %}" id="coordinatesdisplay"></span>
 </span>
