--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.json.twig
@@ -1,6 +1,7 @@
 {
-"mb.core.sketch.circle.radius.label": "{{ "mb.core.sketch.circle.radius.label" | trans | raw }}",
-"mb.core.sketch.circle.radius.error": "{{ "mb.core.sketch.circle.radius.error" | trans | raw }}",
-"mb.core.sketch.circle.form.button.yes": "{{ "mb.core.sketch.circle.form.button.yes" | trans | raw }}",
-"mb.core.sketch.circle.form.button.cancel": "{{ "mb.core.sketch.circle.form.button.cancel" | trans | raw }}",
+"mb.core.layertree.confirm.allremove": "{{ "mb.core.layertree.confirm.allremove" | trans}}",
+"mb.core.layertree.popup.btn.ok": "{{ "mb.core.layertree.popup.btn.ok" | trans}}",
+"mb.core.layertree.const.outofscale": "{{ "mb.core.layertree.const.outofscale" | trans}}",
+"mb.core.layertree.const.outofbounds": "{{ "mb.core.layertree.const.outofbounds" | trans}}",
+"mb.core.layertree.const.parentinvisible": "{{ "mb.core.layertree.const.parentinvisible" | trans}}"
 }
