--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-printclient" title="{{ "mb.core.printclient.title"|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-printclient" title="{{ title |trans }}">
     <div class="format-form">
         <form id="formats" action="">
             <label class="labelInput">{{ 'mb.core.printclient.label.template' | trans }}</label>
