--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/legend.html.twig
@@ -18,7 +18,7 @@
     <div class="clearContainer"></div>
     {{ form_widget(form.configuration.generateLegendGraphicUrl) }}<label for="{{form.configuration.generateLegendGraphicUrl.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.generatelegendurl"|trans}}</label>
     <div class="clearContainer"></div>
-    {{ form_widget(form.configuration.showSourceTitle) }}<label for="{{form.configuration.showSourceTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showwmsitle"|trans}}</label>
+    {{ form_widget(form.configuration.showSourceTitle) }}<label for="{{form.configuration.showSourceTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showsourcetitle"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_widget(form.configuration.showLayerTitle) }}<label for="{{form.configuration.showLayerTitle.vars.id}}" class="labelCheck">{{"mb.core.admin.legend.label.showlayertitle"|trans}}</label>
     <div class="clearContainer"></div>
