--- a/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
@@ -1,4 +1,4 @@
-{{ "mb.wmc.wmsloader.class.title" | trans}}
-{{ "mb.wmc.wmsloader.class.description" | trans}}
-{{ "mb.wmc.wmsloader.tag.wms" | trans}}
-{{ "mb.wmc.wmsloader.tag.loader" | trans}}
+{{ "mb.wms.wmsloader.class.title" | trans}}
+{{ "mb.wms.wmsloader.class.description" | trans}}
+{{ "mb.wms.wmsloader.tag.wms" | trans}}
+{{ "mb.wms.wmsloader.tag.loader" | trans}}
