--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
@@ -1,6 +1,5 @@
 {
-"mb.core.sketch.circle.radius.label": "{{ "mb.core.sketch.circle.radius.label" | trans | raw }}",
-"mb.core.sketch.circle.radius.error": "{{ "mb.core.sketch.circle.radius.error" | trans | raw }}",
-"mb.core.sketch.circle.form.button.yes": "{{ "mb.core.sketch.circle.form.button.yes" | trans | raw }}",
-"mb.core.sketch.circle.form.button.cancel": "{{ "mb.core.sketch.circle.form.button.cancel" | trans | raw }}",
+"mb.core.featureinfo.error.nolayer": "{{ "mb.core.featureinfo.error.nolayer" | trans }}",
+"mb.core.featureinfo.error.unknownoption": "{{ "mb.core.featureinfo.error.unknownoption" | trans }}",
+"mb.core.featureinfo.popuo.btn.ok": "{{ "mb.core.featureinfo.popuo.btn.ok" | trans }}" 
 }
