--- a/src/Mapbender/CoreBundle/Resources/views/Element/gpsposition.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/gpsposition.json.twig
@@ -1,6 +1,3 @@
 {
-"mb.core.sketch.circle.radius.label": "{{ "mb.core.sketch.circle.radius.label" | trans | raw }}",
-"mb.core.sketch.circle.radius.error": "{{ "mb.core.sketch.circle.radius.error" | trans | raw }}",
-"mb.core.sketch.circle.form.button.yes": "{{ "mb.core.sketch.circle.form.button.yes" | trans | raw }}",
-"mb.core.sketch.circle.form.button.cancel": "{{ "mb.core.sketch.circle.form.button.cancel" | trans | raw }}",
+"mb.core.gpsposition.error.notsupported": "{{ "mb.core.gpsposition.error.notsupported" | trans | raw }}"
 }
