--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -1,14 +1,14 @@
-<div id="{{ id }}" class="mb-element mb-element-layertree" title="{{ title|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-layertree">
   <li class="hide-elm leave showLeaves" data-state="" data-title="">
     <div class="leaveContainer">
       <span class="layer-spinner"></span>
       <span class="layer-state"></span>
-      <span class="iconFolder left"></span>
-      <div class="checkWrapper left iconCheckbox">
-        <input class="layer-selected checkbox" type="checkbox" title="{{ 'mb.core.layertree.label.visibilityselector' | trans  }}" name="selected">
+      <span class="iconFolder left" title="{{ 'mb.core.layertree.tooltip.sublayers_openclose'|trans }}"></span>
+      <div class="checkWrapper left iconCheckbox" title="{{ 'mb.core.layertree.label.visibility_onoff' | trans  }}">
+        <input class="layer-selected checkbox" type="checkbox" name="selected">
       </div>
-      <div class="checkWrapper left iconInfo featureInfoWrapper">
-        <input class="layer-info checkbox" type="checkbox" title="{{ 'mb.core.layertree.label.featureinfoselector' | trans  }}" name="info"/>
+      <div class="checkWrapper left iconInfo featureInfoWrapper" title="{{ 'mb.core.layertree.label.featureinfo_onoff' | trans  }}">
+        <input class="layer-info checkbox" type="checkbox" name="info"/>
       </div>
       <span class="layer-title labelCheck"></span>
       <span class="layer-menu-btn">&#9776;
@@ -27,7 +27,7 @@
           <span class="layer-kmlexport span-btn">{{ 'mb.core.layertree.label.kmlexport'|trans }}</span>
         </div>
       </span>
-      <span class="iconRemove"></span>
+      <span class="iconRemove" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
     </div>
     <ul id="list-first" class="layers"></ul>
   </li>
