--- a/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/legend.html.twig
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="mb-element mb-element-legend" title="{{ "mb.core.legend.title"|trans }}">
+<div id="{{ id }}" class="mb-element mb-element-legend" title="{{ title |trans }}">
     <div id="imgtest"></div>
     <div id="legends"></div>
 </div>
