--- a/src/Mapbender/CoreBundle/Resources/views/Element/measure_dialog.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/measure_dialog.html.twig
@@ -1,1 +1,1 @@
-<div class="mb-element mb-element-{{ configuration.type }}ruler" id="{{ id }}" title="{{ "mb.core.measuredialog.title"|trans }}"></div>
+<div class="mb-element mb-element-{{ configuration.type }}ruler" id="{{ id }}" title="{{ title|trans }}"></div>
