--- a/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/wmcbundle.trans.twig
@@ -1,3 +1,19 @@
+{{ "mb.wmc.suggestmap.class.title" | trans}}
+{{ "mb.wmc.suggestmap.class.description" | trans}}
+{{ "mb.wmc.suggestmap.tag.suggest" | trans}}
+{{ "mb.wmc.suggestmap.tag.map" | trans}}
+{{ "mb.wmc.wmceditor.class.title" | trans}}
+{{ "mb.wmc.wmceditor.class.description" | trans}}
+{{ "mb.wmc.wmceditor.tag.wmc" | trans}}
+{{ "mb.wmc.wmceditor.tag.editor" | trans}}
+{{ "mb.wmc.wmclist.class.title" | trans}}
+{{ "mb.wmc.wmclist.class.description" | trans}}
+{{ "mb.wmc.wmclist.tag.wmc" | trans}}
+{{ "mb.wmc.wmclist.tag.list" | trans}}
+{{ "mb.wmc.wmcloader.class.title" | trans}}
+{{ "mb.wmc.wmcloader.class.description" | trans}}
+{{ "mb.wmc.wmcloader.tag.wmc" | trans}}
+{{ "mb.wmc.wmcloader.tag.loader" | trans}}
 {{ "mb.wmc.error.wmcxmlloader_notallowed" | trans}}
 {{ "mb.wmc.error.wmclistloader_notallowed" | trans}}
 {{ "mb.wmc.error.wmcidloader_notallowed" | trans}}
